# aiaas-showcase-app

./: .gitignore  README.md  pyproject.toml
src/app/: __init__.py  processor.py
src/app/detect/: __init__.py  explicit_content_detection.py  face_detection.py  labels_detection.py  landmarks_detection.py  logo_detection.py  objects_detection.py  text_image_detection.py
src/app/static/css/: styles.css
src/app/static/js/: main.js
src/app/templates/: file_details.html  file_upload.html  hello.html
